kubernetes/apps/ai/toolhive/config/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.greyrock.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway
spec:
  hostnames:
    - mcp.greyrock.io
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: vmcp-mcp-gateway-internal
          port: 4483
---
# yaml-language-server: $schema=https://k8s-schemas.greyrock.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway-direct
spec:
  hostnames:
    - mcp-direct.greyrock.io
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: vmcp-mcp-gateway-direct
          port: 4483
